--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Node.js
+# Root Node.js & environment
 node_modules/
 npm-debug.log*
 yarn-debug.log*
@@ -8,24 +8,32 @@ pnpm-lock.yaml
 .env
 .env.*.local
 
-# Build output
+# Build and cache directories (root or nested)
 dist/
 build/
 out/
 temp/
 .cache/
 
-# Electron specific
+# Electron-specific build outputs
+*.asar
 .electron/
 electron-out/
-*.asar
 
-# Logs and crash reports
+# If builds happen inside the electron-desktop folder
+electron-desktop/dist/
+electron-desktop/build/
+electron-desktop/out/
+electron-desktop/node_modules/
+electron-desktop/.cache/
+electron-desktop/*.asar
+
+# Logs and system files
 logs/
 *.log
 *.tsbuildinfo
 
-# OS and editor-specific
+# IDEs and OS junk
 .DS_Store
 Thumbs.db
 .vscode/
@@ -36,19 +44,17 @@ Thumbs.db
 coverage/
 *.lcov
 
-# Optional: VS Code extensions or settings
+# Git backup & packaging artifacts
+*.orig
+*.tgz
+*.gz
+*.zip
+
+# VS Code project files (optional)
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
-
-# Git backup
-*.orig
-
-# Misc
-*.tgz
-*.gz
-*.zip
 
 # TypeScript
 *.tsbuildinfo
@@ -56,6 +62,6 @@ coverage/
 # Next.js (if using it)
 .next/
 
-# Vue.js (if using it)
+# Vite (if using Vue/Vite)
 .vite/
 vite.config.*
